--- a/example/sap_flights_simplest_demo/pubspec.yaml
+++ b/example/sap_flights_simplest_demo/pubspec.yaml
@@ -24,12 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   sap_connect: ^0.1.0
+  intl: ^0.15.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
