--- a/example/sap_flights_simplest_demo/pubspec.yaml
+++ b/example/sap_flights_simplest_demo/pubspec.yaml
@@ -14,21 +14,23 @@ description: Simplest demo for sap_connect package
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  intl: ^0.17.0
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   sap_connect: ^0.1.0
-  intl: ^0.15.7
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
